--- a/analyze apply extend/apply/index.html
+++ b/analyze apply extend/apply/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<!-- Student's Name, Today's Date -->
+<!-- Student's Name-Jovensky Sainthilaire, Today's Date- 11/16/22 -->
 <html lang="en">
 <head>
 	<title>Chapter 10, Apply</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="apply10.css">
 </head>
+<script src="scripts/script.js"></script>
+
 <body>
 
 	<div id="container">
@@ -29,7 +31,7 @@
         </main>
 
         <footer>
-            <p>Created by: Student's Name</p>
+            <p>Created by: Name-Jovensky Sainthilaire</p>
         </footer>
 
 	</div>
