--- a/analyze apply extend/apply/index.html
+++ b/analyze apply extend/apply/index.html
@@ -4,9 +4,10 @@
 <head>
 	<title>Chapter 10, Apply</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="apply10.css">
+	<link rel="stylesheet" href="css/apply10.css">
+    <script src="script.js"></script>
+
 </head>
-<script src="scripts/script.js"></script>
 
 <body>
 
@@ -25,7 +26,7 @@
             <section>
                 <h2>JavaScript Demonstration</h2>
                 <p>Many of today's websites integrate JavaScript within their website to increase user interaction. Click the button below to generate new webpage content.</p>
-                <button>View new page content</button>
+                <button onclick= "content()">View new page content</button>
                 <p id="new"></p>
             </section>
         </main>
