--- a/analyze apply extend/extend/extend10.html
+++ b/analyze apply extend/extend/extend10.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<!-- Student's Name, Today's Date -->
+<!-- Student's Name- Jovensky Saint-hilaire, Today's Date-11/17/22 -->
 <html lang="en">
 <head>
  
     <title>Chapter 10, Extend</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-   
+    <script src="/analyze apply extend/extend/scripts/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,15 +23,15 @@
                 <p>I know how to add functionality to webpages with JavaScript.</p>
                 <p>I understand how to use the jQuery library.</p>
 
-                <button>Hide</button>
-                <button>Show</button>
+                <button  id="hide">Hide</button>
+                <button  id="show">Show</button>
 		
 		</article>
         
         <footer>
-            <p>Student's Name: </p>
-            <p>The latest version of jQuery is: </p>
-            <p>Resource used to complete this assignment: </p>
+            <p>Student's Name: Jovensky Saint-hilaire </p>
+            <p>The latest version of jQuery is: jQuery Core 3.6.1  </p>
+            <p>Resource used to complete this assignment: Youtube and W3School </p>
         </footer>
 	
 	</div>
